istio-demo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-httproute
spec:
  hostnames:
  - "httproute.k8s.sfo.rainpole.io"
  parentRefs:
  - name: chris-tkg-gateway
  rules:
  - filters:
     - type: ExtensionRef
       extensionRef:
         group: ako.vmware.com
         kind: L7Rule
         name: gw-sec
    matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: web-front-1
      port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: ako.vmware.com
            kind: HealthMonitor
            name: System-Ping
